<resources>
    <string name="app_name">DiceRollerConstraintLayout</string>
    <string name="roll">Lanzar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">ID</string>
    <string name="dado_1">Dado 1</string>
    <string name="dado_2">Dado 2</string>
    <string name="fecha">Fecha</string>
    <string name="clear">Limpiar</string>
    <string name="clear_dialog_title">Limpieza de datos</string>
    <string name="clear_dialog_message">Se borrarán todos los registros de lanzamiento. \n¿Desea continuar?</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm">Confirmar</string>
    <string name="hide_time">Ocultar Hora</string>
    <string name="am_pm_format">AM/PM</string>
    <string name="formato_24_horas">24 horas</string>
    <string name="dice_roller">Tirador de dados</string>
    <string name="dices">Dados</string>
    <string name="settings">Settings</string>
    <string name="time_format_display">Formato de hora a mostrar</string>
    <string name="mostrar_columna_id">Mostrar columna Id</string>
</resources>